# SlaveTatsGUI

./: .gitmodules  CMakeLists.txt  README.md  deploy.bat  distro.bat  vcpkg.json
config/: attribute_definitions.json  tattoo_field_db.json
include/: UI.h  combos.h  editors.h  imgui_utils.h  model_and_views.h  nioverride_utils.h  slavetats_util.h  slavetatsng_wrapper.h  tattoo_field_db.h  tattoo_field_definitions.h  widget_actor_selector.h  widget_float_editor.h  widget_int_editor.h  widget_new_field_selector.h  widget_override_list.h  widget_slot_selector.h  widget_string_editor.h  win_actor_editor.h  win_field_editor.h  win_inspector.h  window_apply_remove.h
include/backup/: widget_area_selector.h  widget_cached_tattoo_selector.h  widget_field_selector.h  widget_float_editor.h  widget_int_editor.h  widget_new_field_selector.h  widget_string_editor.h  window_field_editor.h  window_inspector.h
src/: PCH.h  UI.cpp  combos.cpp  imgui_utils.cpp  main.cpp  model_and_views.cpp  nioverride_utils.cpp  slavetats_util.cpp  tattoo_field_db.cpp  tattoo_field_definitions.cpp  widget_actor_selector.cpp  widget_area_selector.cpp  widget_cached_tattoo_selector.cpp  widget_field_selector.cpp  widget_float_editor.cpp  widget_int_editor.cpp  widget_new_field_selector.cpp  widget_override_list.cpp  widget_slot_selector.cpp  widget_string_editor.cpp  win_actor_editor.cpp  win_field_editor.cpp  win_inspector.cpp  window_apply_remove.cpp  window_field_editor.cpp  window_inspector.cpp
src/backup/: widget_actor_selector.cpp  widget_int_editor.cpp  widget_override_list.cpp
